style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  list-style: none;
  text-decoration: none;
  text-transform: capitalize;
  color: inherit;
}

@media screen and (max-width: 768px) {
  .main {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    min-height: 100vh;
    background-image: url('./src/low-poly-grid-haikei.svg');
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
  }

  /*LOGIN***************************************************************/
  .login {
    color: #000;
    text-transform: uppercase;
    letter-spacing: 2px;
    display: block;
    font-weight: bold;
    font-size: x-large;
  }

  .card {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 350px;
    width: 300px;
    flex-direction: column;
    gap: 35px;
    background: #e0dfdf;
    box-shadow: 5px 5px 13px #050505,
      -5px -5px 13px #040404;
    border-radius: 8px;
  }

  .inputBox {
    position: relative;
    width: 250px;
  }

  .inputBox input {
    width: 100%;
    padding: 10px;
    outline: none;
    border: none;
    color: #000;
    font-size: 1em;
    background: transparent;
    border-left: 2px solid #000;
    border-bottom: 2px solid #000;
    transition: 0.1s;
    border-bottom-left-radius: 8px;
  }

  .inputBox span {
    margin-top: 5px;
    position: absolute;
    left: 0;
    transform: translateY(-4px);
    margin-left: 10px;
    padding: 10px;
    pointer-events: none;
    font-size: 12px;
    color: #000;
    text-transform: uppercase;
    transition: 0.5s;
    letter-spacing: 3px;
    border-radius: 8px;
  }

  .inputBox input:valid~span,
  .inputBox input:focus~span {
    transform: translateX(113px) translateY(-15px);
    font-size: 0.8em;
    padding: 5px 10px;
    background: #000;
    letter-spacing: 0.2em;
    color: #fff;
    border: 2px;
  }

  .inputBox input:valid,
  .inputBox input:focus {
    border: 2px solid #000;
    border-radius: 8px;
  }

  .enter {
    height: 45px;
    width: 100px;
    border-radius: 5px;
    border: 2px solid #000;
    cursor: pointer;
    background-color: transparent;
    transition: 0.5s;
    text-transform: uppercase;
    font-size: 10px;
    letter-spacing: 2px;
    margin-bottom: 1em;
  }

  .enter:hover {
    background-color: rgb(0, 0, 0);
    color: white;
  }

  /*tODOLIST*************************************************************/
  .wrapTodo {
    color: #ffffff;
    width: 100%;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    background-image: url('./src/wave-haikei.svg');
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    overflow-y: auto;
    padding: 10px 0;
  }

  .addTodoForm {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 15px;
    color: #0066FF;
  }

  .addTodo {
    font-weight: 600;
    padding: 10px;
    border-radius: 12px;
    border: 0;
    box-shadow: 0 0 8px;
  }

  .submitTodo {
    padding: 8px 15px;
    border-radius: 12px;
    border: 0;
    box-shadow: 1px 1px 11px -1px rgba(255, 255, 255, 0.96)
  }

  .wrapTodoList {
    display: flex;
    flex-direction: column-reverse;
    justify-content: flex-end;
    align-items: center;
    gap: 10px;
    width: 100%;
    height: 100%;
    border-radius: 12px;
    padding: 10px;
    box-shadow: 1px 1px 11px -1px rgba(255, 255, 255, 0.96);
    margin-top: 10px;
  }

  .todoEl {
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: center;
    padding: 5px;
    box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.96);
    border-radius: 5px;
  }
}

